<resources>
    <string name="app_name">Guess the number</string>
    <string name="title">Guess a number between 0 to 100!</string>
    <string name="high">Number is too high, try lower one</string>
    <string name="low">Number is too low, try higher one</string>
    <string name="won">You won!</string>
    <string name="enter">Enter</string>
    <string name="reset">Reset</string>
    <string name="remaining_guesses">Remaining guesses: </string>
    <string name="loss">Sorry, You loss.</string>
    <string name="error">Please enter a number to continue.</string>
    <string name="developer">Developed By: live.Harshit</string>
    <string name="title_activity_rule">RuleActivity</string>
    <string name="rule">Answer is a random number between 0 to 100 . You have 7 chances to guess the number. Every time you enter a number, the game will tell you the entered number is high or low to the answer.</string>
    <string name="lets_play">Play now</string>
</resources>
