<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#394646"
    tools:context=".RuleActivity">

    <TextView
        android:id="@+id/title_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:gravity="center_horizontal"
        android:text="@string/app_name"
        android:textColor="@color/colorAccent"
        android:textSize="30dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/rule_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_text_view"
        android:layout_marginTop="32dp"
        android:padding="16dp"
        android:text="@string/rule"
        android:textColor="#ffffff"
        android:textSize="20dp" />

    <Button
        android:id="@+id/play_button"
        android:layout_width="256dp"
        android:layout_height="128dp"
        android:layout_below="@id/rule_text_view"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:background="@drawable/play_button"
        android:paddingBottom="10dp"
        android:text="@string/lets_play"
        android:textSize="25dp" />


</RelativeLayout>